<resources>
    <string name="app_name">eboltify</string>

    <string name="font_roboto_regular">fonts/roboto_regular.ttf</string>
    <string name="font_roboto_light">fonts/roboto_light.ttf</string>
    <string name="font_roboto_medium">fonts/roboto_medium.ttf</string>

    <!-- Bottom Navigation Name -->
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_sales">Sales</string>
    <string name="bottom_navigation_inbox">Inbox</string>
    <string name="bottom_navigation_reports">Reports</string>
    <string name="bottom_navigation_more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="field_input_cannot_be_empty">This field can not be empty</string>
    <string name="field_input_password_minimum">The password length must be more than 6 characters</string>
    <string name="field_input_email_invalid">Email is invalid</string>

    <!-- More Fragment-->
    <string name="more_items">Items</string>
    <string name="more_customer_care">Customers Care</string>
    <string name="more_settings">Settings</string>
    <string name="more_sign_out">Sign Out</string>

    <!-- Items Management -->
    <string name="items_management_list_all_items">All Items</string>
    <string name="items_management_categories">Categories</string>
    <string name="items_management_modifier">Modifier</string>
    <string name="items_management_discount">Discount</string>

    <!-- Items Create -->
    <string name="items_create">Create Item</string>
    <string name="items_create_header">Item Description</string>
    <string name="items_create_please_enter_your_item_name">Name</string>
    <string name="items_create_please_enter_your_item_description">Description</string>
    <string name="items_create_categories">Categories</string>
    <string name="items_create_sold_by">Sold By</string>
    <string name="items_create_sold_by_each">Each</string>
    <string name="witems_create_sold_by_eight">Weight</string>
    <string name="items_create_please_enter_your_item_price">Price</string>
    <string name="items_create_please_enter_your_item_sku">SKU</string>

    <string name="items_create_representation_header">Representation On eboltify</string>
    <string name="items_create_representation_by_color">Color</string>
    <string name="items_create_representation_by_image">Image</string>
    <string name="items_create_representation_upload_file">Upload Image File</string>
    <string name="items_create_representation_camera">Take Photo</string>

    <string name="categories_all">Categories</string>

    <string name="categories_create">Create Category</string>
    <string name="categories_create_name">Name</string>
    <string name="categories_create_description">Category Description</string>
    <string name="categories_create_color">Category Color</string>

    <!-- Discount -->
    <string name="discounts">Discounts</string>
    <string name="discounts_create_description">Discount Description</string>
    <string name="discounts_create">Create Discount</string>
    <string name="discounts_name">Name</string>
    <string name="discounts_value">Value</string>
    <string name="discounts_by">Discount By</string>
    <string name="discounts_by_percent">%</string>
    <string name="discounts_by_unit">$</string>

    <!-- Modifiers -->
    <string name="modifiers">Modifiers</string>
    <string name="modifiers_create_description">Modifiers Description</string>
    <string name="modifiers_create">Create Modifier</string>
    <string name="modifiers_create_name">Name</string>

    <string name="modifiers_create_options">Options</string>

    <!-- Sign In -->
    <string name="sign_in_email_hint">Email</string>
    <string name="sign_in_uuid_hint">Uuid</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_loading">Signing In, Please wait !</string>


</resources>
