<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.eboltify.sales.ui.items_create.ItemsCreateActivity">

<include layout="@layout/toolbar"
    android:id="@+id/toolbar" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:visibility="visible">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_very_light"
        android:orientation="vertical"
        android:padding="@dimen/items_create_padding">

        <LinearLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/items_create_margin"
            android:layout_marginTop="@dimen/items_create_margin"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/items_create_padding"
            android:visibility="visible">

            <TextView
                android:id="@+id/create_item_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/items_create_margin"
                android:layout_marginTop="@dimen/items_create_margin"
                android:gravity="center"
                android:text="@string/items_create_header"
                fontPath="@string/font_roboto_medium"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/header_text_size"
                tools:ignore="MissingPrefix" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme">

                <EditText
                    android:id="@+id/items_create_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/items_create_margin"
                    android:layout_marginTop="@dimen/items_create_margin"
                    android:hint="@string/items_create_please_enter_your_item_name"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:theme="@style/EditTextTheme"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme">

                <EditText
                    android:id="@+id/items_create_description"
                    android:theme="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/items_create_margin"
                    android:layout_marginTop="@dimen/items_create_margin"
                    android:hint="@string/items_create_please_enter_your_item_description"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"/>
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/items_create_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/items_create_margin"
                android:layout_marginLeft="@dimen/items_create_margin"
                android:layout_marginRight="@dimen/items_create_margin"
                android:layout_marginTop="@dimen/items_create_margin"
                android:hint="@string/items_create_categories"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/secondary_text"
                app:met_underlineColor="@color/secondary_text" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/items_create_margin"
                android:layout_marginLeft="@dimen/items_create_margin"
                android:layout_marginTop="@dimen/items_create_margin"
                android:text="@string/items_create_sold_by"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/primary_text_size" />

            <RadioGroup
                android:id="@+id/items_create_sold_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/items_create_margin"
                android:layout_marginTop="@dimen/items_create_margin"
                android:checkedButton="@id/items_create_sold_by_each"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/items_create_sold_by_each"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/items_create_margin"
                    android:layout_marginTop="@dimen/items_create_margin"
                    android:theme="@style/RadioButton"
                    android:text="@string/items_create_sold_by_each" />

                <RadioButton
                    android:id="@+id/items_create_sold_by_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/items_create_margin"
                    android:layout_marginTop="@dimen/items_create_margin"
                    android:theme="@style/RadioButton"
                    android:text="@string/witems_create_sold_by_eight" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme">

                <EditText
                    android:id="@+id/items_create_price"
                    android:theme="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/items_create_margin"
                    android:layout_marginTop="@dimen/items_create_margin"
                    android:hint="@string/items_create_please_enter_your_item_price"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme">

                <EditText
                    android:id="@+id/items_create_sku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/items_create_margin"
                    android:layout_marginTop="@dimen/items_create_margin"
                    android:hint="@string/items_create_please_enter_your_item_sku"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:theme="@style/EditTextTheme" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/representation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/items_create_margin"
            android:layout_marginTop="@dimen/items_create_margin"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/items_create_padding">
            <TextView
                android:id="@+id/create_item_representation_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/items_create_margin"
                android:layout_marginTop="@dimen/items_create_margin"
                android:gravity="center"
                fontPath="@string/font_roboto_medium"
                android:text="@string/items_create_representation_header"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/header_text_size"
                tools:ignore="MissingPrefix" />

            <RadioGroup
                android:id="@+id/items_create_representation_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/items_create_margin"
                android:layout_marginTop="@dimen/items_create_margin"
                android:checkedButton="@id/items_create_representation_by_color"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/items_create_representation_by_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/items_create_margin"
                    android:layout_marginTop="@dimen/items_create_margin"
                    android:theme="@style/RadioButton"
                    android:text="@string/items_create_representation_by_color" />

                <RadioButton
                    android:id="@+id/items_create_representation_by_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/items_create_margin"
                    android:layout_marginTop="@dimen/items_create_margin"
                    android:theme="@style/RadioButton"
                    android:text="@string/items_create_representation_by_image" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/create_item_representation_recylcer_picker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/create_item_representation_upload_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RelativeLayout
                        android:id="@+id/create_item_representation_upload_file"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/items_management_bt_size"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="@dimen/items_management_items_margin"
                        android:layout_marginTop="@dimen/items_management_items_margin"
                        android:background="@drawable/custom_button_bg"
                        android:foreground="?selectableItemBackground"
                        android:clickable="true">

                        <ImageView
                            android:id="@+id/create_item_representation_upload_file_ic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            app:srcCompat="@drawable/ic_choose_file_image" />

                        <TextView
                            android:id="@+id/create_item_representation_upload_file_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toEndOf="@+id/create_item_representation_upload_file_ic"
                            android:layout_toRightOf="@+id/create_item_representation_upload_file_ic"
                            android:text="@string/items_create_representation_upload_file"
                            android:textAllCaps="false"
                            android:textColor="@color/md_amber_500"
                            android:textSize="@dimen/primary_text_size" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/create_item_representation_take_photo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/items_management_bt_size"
                        android:layout_above="@+id/sign_in_by_email"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="@dimen/items_management_items_margin"
                        android:layout_marginTop="@dimen/items_management_items_margin"
                        android:background="@drawable/custom_button_bg"
                        android:foreground="?selectableItemBackground"
                        android:clickable="true">

                        <ImageView
                            android:id="@+id/create_item_representation_take_photo_ic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            app:srcCompat="@drawable/ic_camera" />

                        <TextView
                            android:id="@+id/create_item_representation_take_photo_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toEndOf="@+id/create_item_representation_take_photo_ic"
                            android:layout_toRightOf="@+id/create_item_representation_take_photo_ic"
                            android:text="@string/items_create_representation_camera"
                            android:textAllCaps="false"
                            android:textColor="@color/md_amber_500"
                            android:textSize="@dimen/primary_text_size" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
