<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign_in.SignInActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/common_padding">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme">

                <EditText
                    android:id="@+id/uuid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_uuid_hint"
                    android:inputType="text"
                    android:text="mkhc"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:theme="@style/EditTextTheme"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_email_hint"
                    android:text="hoa@mkhandicrafts.com"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/secondary_text"
                    android:textColor="@color/primary_text"
                    android:theme="@style/EditTextTheme"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_password_hint"
                    android:inputType="textPassword"
                    android:text="123456"
                    android:maxLines="1"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:theme="@style/EditTextTheme"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:background="@drawable/button_general_background"
                android:foreground="?selectableItemBackground"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>